# skill-mp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  skill_submission.yml
.github/workflows/: build-and-push.yml  ci.yml  docs.yml
builder-agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
builder-agent/src/skill_builder/: __main__.py  cli.py  community.py  configuration.py  git_publisher.py  graph_agents.py  graph_cache.py  graph_instructions.py  graph_phases.py  graph_pipeline.py  graph_registry.py  graph_schemas.py  graph_writer.py  instructions.py  observability.py  pipeline.py  schemas.py  server.py  vector_search.py
builder-agent/src/skill_builder/skills/community-summarizer/: SKILL.md
builder-agent/src/skill_builder/skills/domain-templates/: SKILL.md
builder-agent/src/skill_builder/skills/entity-extractor/: SKILL.md
builder-agent/src/skill_builder/skills/graph-validator/: SKILL.md
builder-agent/src/skill_builder/skills/quality-patterns/: SKILL.md
builder-agent/src/skill_builder/skills/relationship-classifier/: SKILL.md
builder-agent/src/skill_builder/skills/skill-spec-guide/: SKILL.md
builder-agent/tests/: conftest.py  test_cli.py  test_community.py  test_configuration.py  test_git_publisher.py  test_graph_agents.py  test_graph_cache.py  test_graph_phases.py  test_graph_registry.py  test_graph_schemas.py  test_graph_writer.py  test_observability.py  test_server.py  test_vector_search.py
docs/: ARCHITECTURE.md  SKILLS-MARKETPLACE-SPEC.md  api-reference.md  configuration.md  contributing.md  deployment.md  docsclaw-compatibility-report.md  getting-started.md  index.md  skill-authoring.md
docs/evaluation/: 01-standards-comparison.md  02-gap-analysis.md  03-skill-spec-catalog.md  04-registry-distribution-model.md  05-extraction-boundary.md  06-augment-provider-mapping.md  07-integration-paths-ranked.md  08-kagenti-synergy.md  09-framework-architecture.md  10-cross-platform-adapters.md  11-differentiation.md  12-product-definition.md  13-poc-scope.md  14-gtm-recommendation.md
k8s/: builder-agent.yaml  configmap.yaml  deploy.sh  docsclaw-config.yaml  docsclaw-route.yaml  namespace.yaml  neo4j.yaml  secrets.yaml.example  ui.yaml
k8s/docsclaw-local/: agent-card.json  agent-config.yaml  system-prompt.txt
registry/: README.md  marketplace.json
registry/api/openapi-generator/: SKILL.md
registry/azure-sdk-python/agent-framework-azure-ai-py/: SKILL.md
registry/azure-sdk-python/agents-v2-py/: SKILL.md
registry/azure-sdk-python/azure-ai-textanalytics-py/: SKILL.md
registry/azure-sdk-python/azure-ai-vision-imageanalysis-py/: SKILL.md
registry/azure-sdk-python/azure-ai-voicelive-py/: SKILL.md
registry/azure-sdk-python/azure-appconfiguration-py/: SKILL.md
registry/azure-sdk-python/azure-containerregistry-py/: SKILL.md
registry/azure-sdk-python/azure-cosmos-db-py/: SKILL.md
registry/azure-sdk-python/azure-cosmos-py/: SKILL.md
registry/azure-sdk-python/azure-data-tables-py/: SKILL.md
registry/azure-sdk-python/azure-eventgrid-py/: SKILL.md
registry/azure-sdk-python/azure-eventhub-py/: SKILL.md
registry/azure-sdk-python/azure-keyvault-py/: SKILL.md
registry/azure-sdk-python/azure-messaging-webpubsubservice-py/: SKILL.md
registry/azure-sdk-python/azure-monitor-query-py/: SKILL.md
registry/azure-sdk-python/azure-servicebus-py/: SKILL.md
registry/azure-sdk-python/azure-storage-blob-py/: SKILL.md
registry/azure-sdk-python/azure-storage-file-datalake-py/: SKILL.md
registry/azure-sdk-python/azure-storage-file-share-py/: SKILL.md
registry/azure-sdk-python/azure-storage-queue-py/: SKILL.md
registry/azure-sdk-python/hosted-agents-v2-py/: SKILL.md
registry/azure-sdk-python/m365-agents-py/: SKILL.md
registry/azure-sdk-typescript/azure-ai-document-intelligence-ts/: SKILL.md
scripts/: build-skills-dir.sh  generate-skill-cards.py  sync-neo4j.ts
tests/integration/: test_a2a.py
ui/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  site.yaml
ui/e2e/: smoke.spec.ts
ui/src/: instrumentation.ts
ui/src/app/: error.tsx  (+4 more)
(+91 files in other folders)
