[project]
name = "skill-builder-agent"
version = "0.2.0"
description = "ADK multi-agent pipeline that generates SKILL.md files from natural language, with Neo4j vector-powered exemplar retrieval."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "pydantic-settings>=2.8.1",
    "neo4j>=5.20.0",
    "sentence-transformers>=3.0.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-starlette>=0.41b0",
    "pydantic>=2.0",
]

[project.scripts]
server = "skill_builder.server:run"
cli = "skill_builder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_builder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
